--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="col-lg-8 mx-auto text-center">
               <h2 class="section-heading text-shadow">O mnie</h2>
               <hr class="my-4">
-              <p class="text-shadow mb-4">Jestem absolwentem Geoinformacji na Uniwersytecie im. Adama Mickiewicza w Poznaniu. Programowania uczę się od kilku miesięcy, a samym Front-Endem zainteresowałem się w sierpniu w trakcie studiów podczas odbywania stażu w firmie zajmującej się systemami informacji geograficznej. Od tego czasu poznałem w stopniu satysfakcjonującym <b>HTML5/CSS</b> jak i <b>JavaScript</b>. W najbliższym czasie planuje rozpoczęcie nauki preprocesora css <b>Sass</b> jak i jednego z popularnych frameworków <b>AngularJS/Vue</b>.</p>
+              <p class="text-shadow mb-4">Jestem absolwentem Geoinformacji na Uniwersytecie im. Adama Mickiewicza w Poznaniu. Programowania uczę się od kilku miesięcy, a samym Front-Endem zainteresowałem się w sierpniu w trakcie studiów podczas odbywania stażu w firmie zajmującej się systemami informacji geograficznej. Od tego czasu poznałem w stopniu satysfakcjonującym <b>HTML5/CSS</b> jak i <b>JavaScript</b>. W najbliższym czasie planuje rozpoczęcie nauki preprocesora css <b>Sass</b> jak i jednego z popularnych frameworków <b>React/Vue</b>.</p>
               <a class="btn btn-danger btn-xl js-scroll-trigger" href="#technology">Technologie</a>
             </div>
           </div>
