--- a/index.html
+++ b/index.html
@@ -155,6 +155,18 @@
                 </div>
               </a>
             </div>
+            <div class="col-lg-3 col-sm-6">
+              <a class="portfolio-box" href="https://cwanylisek.github.io/newfoundland/" target="_blank">
+                <img class="img-fluid" src="img/psdtohtml.jpg" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-name">
+                      PSD > HTML
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </section>
