--- a/index.html
+++ b/index.html
@@ -96,47 +96,95 @@
               <hr class="my-4">
             </div>
           </div>
-        </div>
-        <div class="container">
           <div class="row">
-              <div class="col-lg-4 col-md-6 text-center">
+              <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box mt-5 mx-auto">
                   <img src="img/html.png" alt="html" class="sr-icons">
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 text-center">
+              <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box mt-5 mx-auto">
                   <img src="img/css.png" alt="css" class="sr-icons">
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 text-center">
+              <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box mt-5 mx-auto">
+                  <img src="img/Bootstrap.png" alt="bootstrap" class="sr-icons">
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box mt-5 mx-auto">
                   <img src="img/js.png" alt="js" class="sr-icons">
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="container">
           <div class="row">
-              <div class="col-lg-4 col-md-6 text-center">
+              <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box mt-5 mx-auto">
-                  <img src="img/pgadmin.png" alt="pgadmin" class="sr-icons">
+                  <img src="img/gulp.png" alt="gulp" class="sr-icons">
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 text-center">
+              <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box mt-5 mx-auto">
-                  <img src="img/Bootstrap.png" alt="bootstrap" class="sr-icons">
+                  <img src="img/sass.png" alt="sass" class="sr-icons">
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 text-center">
+              <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box mt-5 mx-auto">
-                  <img src="img/jquery.png" alt="jquery" class="sr-icons">
+                  <img src="img/npm.png" alt="npm" class="sr-icons">
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box mt-5 mx-auto">
+                  <img src="img/react.png" alt="react" class="sr-icons">
                 </div>
               </div>
             </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="service-box mt-5 mx-auto">
+                    <img src="img/git.png" alt="git" class="sr-icons">
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="service-box mt-5 mx-auto">
+                    <img src="img/less.png" alt="less" class="sr-icons">
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="service-box mt-5 mx-auto">
+                    <img src="img/leafletjs-card.png" alt="less" class="sr-icons">
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="service-box mt-5 mx-auto">
+                    <img src="img/jquery.png" alt="jquery" class="sr-icons">
+                  </div>
+                </div>
+              </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="service-box mt-5 mx-auto">
+                    <img src="img/webpack.png" alt="webpack" class="sr-icons">
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="service-box mt-5 mx-auto">
+                    <img src="img/ubuntu.png" alt="ubuntu" class="sr-icons">
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="service-box mt-5 mx-auto">
+                    <img src="img/pgadmin.png" alt="pgadmin" class="sr-icons">
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="service-box mt-5 mx-auto">
+                    <img src="img/vue.png" alt="vue" class="sr-icons">
+                  </div>
+                </div>
+              </div>
           </div>
-        </div>
       </section>
 
       <!-- projekty -->
@@ -162,6 +210,59 @@
                   <div class="portfolio-box-caption-content">
                     <div class="project-name">
                       PSD > HTML
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <a class="portfolio-box" href="https://drive.google.com/file/d/13tVoai18yXVBuLE88fVgGq3RoKLa3vbg/view?usp=sharing" target="_blank">
+                <img class="img-fluid" src="img/iik.png" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-name">
+                      investinkrosno.pl
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="row no-gutters justify-content-center">
+            <div class="col-lg-3 col-sm-6">
+              <a class="portfolio-box" href="https://cwanylisek.github.io/Kalkulator/" target="_blank">
+                <img class="img-fluid" src="img/turnout.png" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-name">
+                      <h3>Turnout</h3>
+                      todo vue app
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <a class="portfolio-box" href="https://cwanylisek.github.io/newfoundland/" target="_blank">
+                <img class="img-fluid" src="img/cryptoticker.png" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-name">
+                      <h3>Cryptocurrency ticker</h3>
+                      currency ticker in react + axios
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <a class="portfolio-box" href="https://drive.google.com/file/d/13tVoai18yXVBuLE88fVgGq3RoKLa3vbg/view?usp=sharing" target="_blank">
+                <img class="img-fluid" src="img/burger.png" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-name">
+                      <h3>Burger builder</h3>
+                      app in react, react-router, firebase, redux
                     </div>
                   </div>
                 </div>
@@ -193,7 +294,7 @@
               </a>
             </div>
             <div class="col-lg-4 mr-auto text-center">
-              <a href="https://drive.google.com/file/d/18ljD2TKigFOMy2Vg4uG15hEdTboVHM5r/view?usp=sharing" target="_blank">
+              <a href="https://drive.google.com/file/d/1WiUkFDZh6VDDfp_zTMmPh8-bYWxGPmG9/view?usp=sharing" target="_blank">
                 <i class="fa fa-file fa-4x sr-contact"></i>
               </a>
             </div>
