--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <div class="col-lg-8 mx-auto text-center">
               <h2 class="section-heading text-shadow">O mnie</h2>
               <hr class="my-4">
-              <p class="text-shadow mb-4">Jestem absolwentem Geoinformacji na Uniwersytecie im. Adama Mickiewicza w Poznaniu. Programowania uczę się od niecałego roku, a samym Front-Endem zainteresowałem się w sierpniu 2017 r. w trakcie studiów podczas odbywania stażu w firmie zajmującej się systemami informacji geograficznej. Posiadam półroczne doświadczenie komercyjne,
-               które pozwoliło mi się w podstawie zapoznać z najważniejszymi technologiami w branży. Aktualnie całymi siłami rozwijam się w kierunku <i class="fab fa-react fa-1x react"></i>&nbsp;React.js</p>
+              <p class="text-shadow mb-4">Jestem absolwentem Geoinformacji na Uniwersytecie im. Adama Mickiewicza w Poznaniu. Programowania uczę się od niecałego roku, a samym Frontendem zainteresowałem się w sierpniu 2017 r. w trakcie studiów podczas odbywania stażu w firmie zajmującej się systemami informacji geograficznej. Posiadam półroczne doświadczenie komercyjne,
+               które pozwoliło mi w podstawie zapoznać się z najważniejszymi technologiami w branży. Aktualnie z całkowitym zaangażowaniem rozwijam się w kierunku <i class="fab fa-react fa-1x react"></i>&nbsp;React.js</p>
               <a class="btn btn-danger btn-xl js-scroll-trigger" href="#technology">Technologie</a>
             </div>
           </div>
@@ -231,7 +231,7 @@
           </div>
           <div class="row no-gutters justify-content-center">
             <div class="col-lg-3 col-sm-6">
-              <a class="portfolio-box" href="https://cwanylisek.github.io/Kalkulator/" target="_blank">
+              <a class="portfolio-box" href="https://github.com/cwanylisek/turnout-app" target="_blank">
                 <img class="img-fluid" src="img/turnout.png" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
@@ -244,7 +244,7 @@
               </a>
             </div>
             <div class="col-lg-3 col-sm-6">
-              <a class="portfolio-box" href="https://cwanylisek.github.io/newfoundland/" target="_blank">
+              <a class="portfolio-box" href="https://github.com/cwanylisek/crypto-ticker" target="_blank">
                 <img class="img-fluid" src="img/cryptoticker.png" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
@@ -257,7 +257,7 @@
               </a>
             </div>
             <div class="col-lg-3 col-sm-6">
-              <a class="portfolio-box" href="https://drive.google.com/file/d/13tVoai18yXVBuLE88fVgGq3RoKLa3vbg/view?usp=sharing" target="_blank">
+              <a class="portfolio-box" href="https://github.com/cwanylisek/burger" target="_blank">
                 <img class="img-fluid" src="img/burger.png" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
@@ -280,7 +280,7 @@
             <div class="col-lg-8 mx-auto text-center">
               <h2 class="section-heading">Skontaktuj się ze mną!</h2>
               <hr class="my-4">
-              <p class="mb-5">Jestem zainteresowany każdą propozycją stażu, która pomoże mi w dalszej nauce.</p>
+              <p class="mb-5">Jestem zainteresowany każdą propozycją pracy, która pozwoli mi na dalszy rozwój zawodowy.</p>
             </div>
           </div>
           <div class="row">
