--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           </div>
           <div class="row no-gutters justify-content-center">
             <div class="col-lg-3 col-sm-6">
-              <a class="portfolio-box" href="s" target="_blank">
+              <a class="portfolio-box" href="https://github.com/cwanylisek/turnout-app" target="_blank">
                 <img class="img-fluid" src="img/turnout.png" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
@@ -244,7 +244,7 @@
               </a>
             </div>
             <div class="col-lg-3 col-sm-6">
-              <a class="portfolio-box" href="s" target="_blank">
+              <a class="portfolio-box" href="https://github.com/cwanylisek/crypto-ticker" target="_blank">
                 <img class="img-fluid" src="img/cryptoticker.png" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
@@ -257,7 +257,7 @@
               </a>
             </div>
             <div class="col-lg-3 col-sm-6">
-              <a class="portfolio-box" href="s" target="_blank">
+              <a class="portfolio-box" href="https://github.com/cwanylisek/burger" target="_blank">
                 <img class="img-fluid" src="img/burger.png" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
